--- a/lab1_simd/Makefile
+++ b/lab1_simd/Makefile
@@ -1,5 +1,5 @@
 all:serial_pagerank.cpp
-	g++ -o simd_pagerank simd_pagerank.cpp
+	g++ -o serial_pagerank serial_pagerank.cpp
 
 clean:
-	rm simd_pagerank
+	rm serial_pagerank
